--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,92 @@
-# Logs
-logs
-*.log
+
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# Build output
+dist/
+dist-ssr/
+build/
+.next/
+.nuxt/
+.vite/
+netlify/
 
-# Editor directories and files
-.vscode/*
+# Vite
+/.vite/
+
+# VSCode
+.vscode/
 !.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
-.config/
+# Logs
+*.log
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+
+# Test coverage
+coverage/
+
+# Misc
+*.swp
+*.swo
+*.tmp
+*.bak
+
+# Production
+*.tgz
+
+# IDE
+.idea/
+*.iml
+
+# TypeScript
+*.tsbuildinfo
+
+# Others
+public/*.svg
+public/*.ico
+
+# Optional: ignore local SQLite/db files
+db/*.sqlite
+db/*.db
+
+# Optional: ignore generated documentation
+doc/
+
+# Optional: ignore Docker artifacts
+Dockerfile*
+.dockerignore
+
+# Optional: ignore Prettier config
+.prettierrc
+
+# Optional: ignore package lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Optional: ignore Mac system files
+.AppleDouble
+.LSOverride
+
+# Optional: ignore Windows system files
+Desktop.ini
+$RECYCLE.BIN/
+
+# Optional: ignore cursor/AI artifacts
+.cursor/
+
+# Optional: ignore Netlify deploy logs
+.netlify/
