--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "server/**/*",
     "shared/**/*",
     "vite.config.ts",
-    "vite.config.server.ts"
+    "vite.config.server.ts",
+    "api/**/*"
   ],
   "exclude": ["node_modules", "dist"]
 }
