--- a/netlify.toml
+++ b/netlify.toml
@@ -1,15 +1,19 @@
+
 [build]
   command = "npm run build"
   functions = "netlify/functions"
   publish = "dist/spa"
 
-
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
-  
+
 [[redirects]]
   force = true
   from = "/api/*"
   status = 200
   to = "/.netlify/functions/api/:splat"
+
+[[functions]]
+  schedule = "0 3 * * *"
+  path = "/.netlify/functions/send-daily-log"
