--- a/netlify.toml
+++ b/netlify.toml
@@ -4,9 +4,12 @@
   functions = "netlify/functions"
   publish = "dist/spa"
 
+
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
+
+[[functions]]
   schedule = "0 3 * * *"
   path = "/.netlify/functions/send-daily-log"
 
